--- a/wp-content/themes/dissidentbooster/style.css
+++ b/wp-content/themes/dissidentbooster/style.css
@@ -13,11 +13,22 @@ Version: alpha
     margin: 0;
 }
 
+.home h1 {
+    margin: unset;
+}
+
 body {
     background-color: #f9f9f9;
     font-family: Helvetica;
 }
-.my-logo,
+
+.banner {
+    height: 300px;
+    background-color: #f9f9f9;
+    background-image: url("http://localhost:8000/wp-content/uploads/2018/09/wallhaven-689618.jpg");
+    background-position: center;
+}
+
 footer {
     width: 100%;
     padding-left: 1%;
@@ -31,9 +42,6 @@ body > header > h1 > a {
 }
 article > header {
 
-}
-footer {
-    margin-top: 4px;
 }
 
 a {
@@ -86,18 +94,39 @@ a {
 .article-full {
     display: inline-block;
     vertical-align: top;
-    background-color: #FFF;
-    border-radius: 4px;
+    background-color: #6F9C1B;
+    border-radius: 6px;
     margin-bottom: 4px;
 }
 
+.article-loop a {
+    color: #000;
+}
+
+div.main-nav {
+background-color: #000;
+}
+
 div.main-nav ul {
-    list-style-type: none;
-    list-style: none;
-    list-style-image: none;
+list-style-type: none;
+list-style: none;
+list-style-image: none;
 }
 
 div.main-nav li {
-    padding: 20px;
-    display: inline;
+display: inline;
 }
+
+#menu-top-menu {
+margin: unset;
+height: 30px;
+}
+
+#menu-top-menu a {
+color: #fff;
+}
+
+.menu-item {
+margin: 5px
+}
+
