--- a/wp-content/themes/dissidentbooster/src/scss/_global.scss
+++ b/wp-content/themes/dissidentbooster/src/scss/_global.scss
@@ -1,5 +1,5 @@
 /*
-** Global CSS
+** Global SCSS
 */
 
 
@@ -27,17 +27,7 @@ body {
     background-position: center;
 }
 
-footer {
-    width: 100%;
-    padding-left: 1%;
-    margin-bottom: 8px;
-    background-color: #78baff;
-    border: 1px solid #78baff;
-}
-body > header > h1 > a {
-    color: #ffffff;
-    font-weight: 400;
-}
+
 article > header {
 
 }
@@ -99,31 +89,4 @@ a {
 
 .article-loop a {
     color: #000;
-}
-
-div.main-nav {
-background-color: #000;
-}
-
-div.main-nav ul {
-list-style-type: none;
-list-style: none;
-list-style-image: none;
-}
-
-div.main-nav li {
-display: inline;
-}
-
-#menu-top-menu {
-margin: unset;
-height: 30px;
-}
-
-#menu-top-menu a {
-color: #fff;
-}
-
-.menu-item {
-margin: 5px
 }
